# japan-zipcode-microservice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  get-resources.sh  openapi.yaml  package-lock.json  package.json  readme.md  tsconfig.json
data/: download.sh
resources/: readme.md
src/: app.ts  main.rs  setup.ts  zipstore.rs
src/datatypes/: address.ts
src/handlers/: addressApi.ts  docs.ts  graphql.ts  health.ts  home.ts
src/resources/: ken_all_rome.rs  mod.rs
src/stores/: load-csv.ts  zipcodes.ts
static/: index.html
