[package]
name = "japan-zipcode-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"] }
rusqlite = { version = "*", features = ["bundled"] }
encoding_rs = {version = "*"}
csv = {version = "*"}
lazy_static = {version = "*"}
serde = {version = "*", features = ["derive"] } 
