[package]
name = "japan-zipcode-microservice"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
encoding_rs = {version = "*"}
csv = {version = "*"}
lazy_static = {version = "*"}
serde = {version = "*", features = ["derive"] } 
